# sensor-data-normalization

./: .gitignore  README.md  pyproject.toml
conf/: application.conf  logging.conf
scripts/: bench_io_vs_cpu.py  upload_raw_to_s3.py
src/: main.py  normalizer_app.py
src/app/: app_object.py
src/app/normalizer/queue/: module_status.py  pair_buckets.py
src/common/notification/: log_notifier.py  notification_sender.py  slack_webhook_notifier.py
src/common/process_state/: job_progress.py  module_status.py  notification_queue.py  pair_buckets.py  request_queue.py
src/common/protocol/: normalization_request.py  request_id.py
src/config/: project_config.py
src/listener/: normalization_request_listener.py
src/notification/: log_notifier.py  slack_webhook_notifier.py
src/pcap/: constants.py  local_pcap_splitter.py  packet.py  packet_position.py  pcap_filename_parser.py  pool.py  splitter.py  time_info.py  unprocessed_pcap.py
src/pcap/body/: ethernet.py  ip_header.py  linux_sll.py  linux_sll_v2.py  pcap_body.py  pcap_body_factory.py
src/pcap/headers/: file_header.py  packet_header.py
src/pcap/reader/: multi.py  single.py
src/process_category/: enum_category.py  process_category.py
src/process_state/: job_progress.py  pair_buckets.py
src/protocol/: job_done.py  message.py  normalization_request.py  pair_put.py  protocol_meta.py
src/sensor_category/: enum_sensor.py  sensor.py  sensor_args.py  sensor_registry.py
src/storage/: storage_object_property.py
src/utils/: collection_utils.py  pcap_filename_parser.py
(+5 files in other folders)
